kubernetes-15-networkpolicy/np-project/mydb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydb-deployment
  namespace: mydb-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mydb
  template:
    metadata:
      labels:
        db: mydb
    spec:
      containers:
        - name: mydb
          image: ogierdag/mydb:v1
          resources:
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
  namespace: mydb-ns
spec:
  type: ClusterIP
  selector:
    db: mydb
  ports:
    - port: 80
      targetPort: 80
