kubernetes-15-networkpolicy/np-project/myshop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshop-deployment
  namespace: myshop-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshop
  template:
    metadata:
      labels:
        app: myshop
        role: frontend
    spec:
      containers:
        - name: myshop
          image: ogierdag/myshop:v1
          resources:
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myshop-svc
  namespace: myshop-ns
spec:
  selector:
    app: myshop
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
