kubernetes-15-networkpolicy/np-project/network-policy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: test-network-policy
#   namespace: mydb-ns
# spec:
#   podSelector:
#     matchLabels:
#       db: mydb
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: myshop-ns
#       ports:
#         - protocol: TCP
#           port: 80
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: myshop-ns
#       ports:
#         - protocol: TCP
#           port: 80

# Modify the `network-policy.yaml` as below.

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: test-network-policy
#   namespace: mydb-ns
# spec:
#   podSelector:
#     matchLabels:
#       db: mydb
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#     - from:
#         - ipBlock:
#             cidr: 172.31.0.0/16
#             except:
#               - 172.31.88.146/32
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: myshop-ns
#         - podSelector:
#             matchLabels:
#               role: frontend
#       ports:
#         - protocol: TCP
#           port: 80
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: myshop-ns
#       ports:
#         - protocol: TCP
#           port: 80

# Modify the `network-policy.yaml` as below.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: mydb-ns
spec:
  podSelector:
    matchLabels:
      db: mydb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: myshop-ns
          podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: myshop-ns
      ports:
        - protocol: TCP
          port: 80
